--- a/lottusse-frontend/app/globals.css
+++ b/lottusse-frontend/app/globals.css
@@ -11,3 +11,22 @@
   }
 }
 
+/* Estilos para la barra de desplazamiento */
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+::-webkit-scrollbar-track {
+  background: #e0e0e0;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: linear-gradient(45deg, #6b7280, #1f2937);
+  border-radius: 10px;
+  border: 2px solid #e0e0e0;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: linear-gradient(45deg, #4b5563, #111827);
+}
